@@ -1,3 +1,12 @@
+2007-05-17  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
+
+	* ps-print.el: Use default color when foreground or background color
+	are unspecified.  Reported by Leo <sdl.web@gmail.com>.
+	(ps-print-version): New version 6.7.4.
+	(ps-rgb-color): New argument.  Use default color when color is
+	unspecified.
+	(ps-begin-job): Fix code.
+
 2007-05-17  Martin Rudalics  <rudalics@gmx.at>
 
 	* textmodes/ispell.el (ispell-start-process): Defend against bad
